--- a/components/feedback.html
+++ b/components/feedback.html
@@ -60,7 +60,7 @@
     <link rel="next" href="plots.md" />
     
     
-    <link rel="prev" href="slider-input.md" />
+    <link rel="prev" href="slider-input.html" />
     
 
     </head>
@@ -174,9 +174,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="dashboard.md">
+        <li class="chapter " data-level="1.4.1" data-path="dashboard.html">
             
-                <span>
+                <a href="dashboard.html">
             
                     
                     Dashboard
@@ -188,9 +188,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.md">
+        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.html">
             
-                <span>
+                <a href="checkbox-input.html">
             
                     
                     CheckboxInput
@@ -201,9 +201,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.2" data-path="number-input.md">
+        <li class="chapter " data-level="1.4.1.2" data-path="number-input.html">
             
-                <span>
+                <a href="number-input.html">
             
                     
                     NumberInput
@@ -214,9 +214,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.md">
+        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.html">
             
-                <span>
+                <a href="slider-input.html">
             
                     
                     SliderInput
@@ -272,9 +272,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.md">
+        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.html">
             
-                <span>
+                <a href="density-plot.html">
             
                     
                     Density Plot
@@ -285,9 +285,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.md">
+        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.html">
             
-                <span>
+                <a href="r-plot.html">
             
                     
                     R Plot
@@ -441,8 +441,8 @@
 </code></pre>
 <p>Options:</p>
 <ul>
-<li><code>for</code>: <code>string</code> giving the <code>id</code> of the HTML element to collect feedback for. Required option.</li>
-<li><code>url</code>: <code>string</code> giving the URL to which a POST request is made with the collected user data. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>for</strong>: <code>string</code> giving the <code>id</code> of the HTML element to collect feedback for. Required option.</li>
+<li><strong>url</strong>: <code>string</code> giving the URL to which a POST request is made with the collected user data. Default: <code>&apos;&apos;</code>.</li>
 </ul>
 
                                 
@@ -471,7 +471,7 @@
 
             
                 
-                <a href="slider-input.md" class="navigation navigation-prev " aria-label="Previous page: SliderInput">
+                <a href="slider-input.html" class="navigation navigation-prev " aria-label="Previous page: SliderInput">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
@@ -487,7 +487,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Feedback Buttons","level":"1.4.2","depth":2,"next":{"title":"Plots","level":"1.4.3","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Function Plot","level":"1.4.3.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},"previous":{"title":"SliderInput","level":"1.4.1.3","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/feedback.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Feedback Buttons","level":"1.4.2","depth":2,"next":{"title":"Plots","level":"1.4.3","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Function Plot","level":"1.4.3.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},"previous":{"title":"SliderInput","level":"1.4.1.3","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/feedback.md","mtime":"2016-08-14T01:07:55.656Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-14T01:11:48.396Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
