--- a/components/function-plot.html
+++ b/components/function-plot.html
@@ -57,7 +57,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="density-plot.md" />
+    <link rel="next" href="density-plot.html" />
     
     
     <link rel="prev" href="plots.md" />
@@ -174,9 +174,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="dashboard.md">
+        <li class="chapter " data-level="1.4.1" data-path="dashboard.html">
             
-                <span>
+                <a href="dashboard.html">
             
                     
                     Dashboard
@@ -188,9 +188,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.md">
+        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.html">
             
-                <span>
+                <a href="checkbox-input.html">
             
                     
                     CheckboxInput
@@ -201,9 +201,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.2" data-path="number-input.md">
+        <li class="chapter " data-level="1.4.1.2" data-path="number-input.html">
             
-                <span>
+                <a href="number-input.html">
             
                     
                     NumberInput
@@ -214,9 +214,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.md">
+        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.html">
             
-                <span>
+                <a href="slider-input.html">
             
                     
                     SliderInput
@@ -272,9 +272,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.md">
+        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.html">
             
-                <span>
+                <a href="density-plot.html">
             
                     
                     Density Plot
@@ -285,9 +285,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.md">
+        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.html">
             
-                <span>
+                <a href="r-plot.html">
             
                     
                     R Plot
@@ -443,12 +443,12 @@
 </code></pre>
 <h2 id="options">Options</h2>
 <ul>
-<li><code>data</code>: An array of <code>objects</code> with either a <code>fun</code> or <code>points</code> key. <code>fun</code> expects a <code>function</code> to be plotted, whereas <code>points</code> should be an array of arrays of length two holding the (x,y) pairs to be plotted. Required.</li>
-<li><code>id</code>: Unique <code>string</code> identifier for the plot to be created. Required.</li>
-<li><code>width</code>: <code>number</code> giving the width of the created plot (in px). Default: <code>250</code>.</li>
-<li><code>height</code>: <code>number</code> giving the height of the created plot (in px). Default: <code>250</code>.</li>
-<li><code>title</code>: <code>string</code> specifying the title of the plot. Default: <code>null</code>.</li>
-<li><code>disableZoom</code>: <code>boolean</code> indicating whether zooming should be disabled. Default: <code>true</code>.</li>
+<li><strong>data</strong>: An array of <code>objects</code> with either a <code>fun</code> or <code>points</code> key. <code>fun</code> expects a <code>function</code> to be plotted, whereas <code>points</code> should be an array of arrays of length two holding the (x,y) pairs to be plotted. Required.</li>
+<li><strong>id</strong>: Unique <code>string</code> identifier for the plot to be created. Required.</li>
+<li><strong>width</strong>: <code>number</code> giving the width of the created plot (in px). Default: <code>250</code>.</li>
+<li><strong>height</strong>: <code>number</code> giving the height of the created plot (in px). Default: <code>250</code>.</li>
+<li><strong>title</strong>: <code>string</code> specifying the title of the plot. Default: <code>null</code>.</li>
+<li><strong>disableZoom</strong>: <code>boolean</code> indicating whether zooming should be disabled. Default: <code>true</code>.</li>
 </ul>
 
                                 
@@ -482,7 +482,7 @@
                 </a>
                 
                 
-                <a href="density-plot.md" class="navigation navigation-next " aria-label="Next page: Density Plot">
+                <a href="density-plot.html" class="navigation navigation-next " aria-label="Next page: Density Plot">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -493,7 +493,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Function Plot","level":"1.4.3.1","depth":3,"next":{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},"previous":{"title":"Plots","level":"1.4.3","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Function Plot","level":"1.4.3.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/function-plot.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Function Plot","level":"1.4.3.1","depth":3,"next":{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},"previous":{"title":"Plots","level":"1.4.3","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Function Plot","level":"1.4.3.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/function-plot.md","mtime":"2016-08-14T01:08:22.705Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-14T01:11:48.396Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
