--- a/components/latex.html
+++ b/components/latex.html
@@ -174,9 +174,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="dashboard.md">
+        <li class="chapter " data-level="1.4.1" data-path="dashboard.html">
             
-                <span>
+                <a href="dashboard.html">
             
                     
                     Dashboard
@@ -188,9 +188,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.md">
+        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.html">
             
-                <span>
+                <a href="checkbox-input.html">
             
                     
                     CheckboxInput
@@ -201,9 +201,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.2" data-path="number-input.md">
+        <li class="chapter " data-level="1.4.1.2" data-path="number-input.html">
             
-                <span>
+                <a href="number-input.html">
             
                     
                     NumberInput
@@ -214,9 +214,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.md">
+        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.html">
             
-                <span>
+                <a href="slider-input.html">
             
                     
                     SliderInput
@@ -272,9 +272,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.md">
+        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.html">
             
-                <span>
+                <a href="density-plot.html">
             
                     
                     Density Plot
@@ -285,9 +285,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.md">
+        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.html">
             
-                <span>
+                <a href="r-plot.html">
             
                     
                     R Plot
@@ -442,11 +442,11 @@
 </code></pre>
 <h2 id="options">Options:</h2>
 <ul>
-<li><code>raw</code>: The literal LaTeX <code>string</code> to render. Also accepts <code>numbers</code>. Default: <code>&apos;&apos;</code>.</li>
-<li><code>displayMode</code>: <code>boolean</code> indicating whether to display the equation inline or in display mode. Default: <code>false</code>.</li>
-<li><code>id</code>: <code>number</code> of the equation in the lesson. Default: <code>NaN</code>.</li>
-<li><code>onClick</code>: Callback <code>function</code> invoked whenever a user clicks on the equation. Default: <code>null</code>.</li>
-<li><code>style</code>: <code>object</code> with CSS key-value pairs to be applied to the equation container. Default: <code>{}</code>.</li>
+<li><strong>raw</strong>: The literal LaTeX <code>string</code> to render. Also accepts <code>numbers</code>. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>displayMode</strong>: <code>boolean</code> indicating whether to display the equation inline or in display mode. Default: <code>false</code>.</li>
+<li><strong>id</strong>: <code>number</code> of the equation in the lesson. Default: <code>NaN</code>.</li>
+<li><strong>onClick</strong>: Callback <code>function</code> invoked whenever a user clicks on the equation. Default: <code>null</code>.</li>
+<li><strong>style</strong>: <code>object</code> with CSS key-value pairs to be applied to the equation container. Default: <code>{}</code>.</li>
 </ul>
 
                                 
@@ -491,7 +491,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"LaTeX Equations","level":"1.4.7","depth":2,"next":{"title":"Video Player","level":"1.4.8","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},"previous":{"title":"Switch","level":"1.4.6","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/latex.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"LaTeX Equations","level":"1.4.7","depth":2,"next":{"title":"Video Player","level":"1.4.8","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},"previous":{"title":"Switch","level":"1.4.6","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/latex.md","mtime":"2016-08-14T01:07:18.651Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-14T01:11:48.396Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
