--- a/components/number-input.html
+++ b/components/number-input.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="" >
     <head>
-        <title>Video Player · ISLE Editor Documentation</title>
+        <title>NumberInput · ISLE Editor Documentation</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="../packaging.html" />
+    <link rel="next" href="slider-input.html" />
     
     
-    <link rel="prev" href="latex.html" />
+    <link rel="prev" href="checkbox-input.html" />
     
 
     </head>
@@ -201,7 +201,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.2" data-path="number-input.html">
+        <li class="chapter active" data-level="1.4.1.2" data-path="number-input.html">
             
                 <a href="number-input.html">
             
@@ -355,7 +355,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.8" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.8" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -416,7 +416,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Video Player</a>
+        <a href=".." >NumberInput</a>
     </h1>
 </div>
 
@@ -431,23 +431,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="video-player">Video Player</h1>
-<p>A component for playing media files and content from YouTube, SoundCloud and Vimeo.</p>
-<p>Example:</p>
-<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">VideoPlayer</span>
-    <span class="hljs-attr">url</span>=<span class="hljs-string">&quot;https://www.youtube.com/watch?v=UzxYlbK2c7E&quot;</span>
-    <span class="hljs-attr">playing</span>
-/&gt;</span>
-</code></pre>
-<h2 id="options">Options</h2>
-<ul>
-<li><strong>url</strong>: URL of the video. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>controls</strong>: <code>boolean</code> indicating whether to display control elements of the video player. Default: <code>false</code></li>
-<li><strong>playing</strong>: <code>boolean</code> indicating whether to automatically start playing the video. Default: <code>false</code></li>
-<li><strong>volume</strong>: <code>number</code> setting the volume of the player. Default: <code>0.8</code></li>
-<li><strong>height</strong>: height of the player. Default: <code>360</code></li>
-<li><strong>width</strong>: width of the player. Default: <code>640</code></li>
-</ul>
+                                <h1 id="number-input">Number Input</h1>
 
                                 
                                 </section>
@@ -475,12 +459,12 @@
 
             
                 
-                <a href="latex.html" class="navigation navigation-prev " aria-label="Previous page: LaTeX Equations">
+                <a href="checkbox-input.html" class="navigation navigation-prev " aria-label="Previous page: CheckboxInput">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="../packaging.html" class="navigation navigation-next " aria-label="Next page: Publishing Lessons">
+                <a href="slider-input.html" class="navigation navigation-next " aria-label="Next page: SliderInput">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -491,7 +475,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Video Player","level":"1.4.8","depth":2,"next":{"title":"Publishing Lessons","level":"1.5","depth":1,"path":"packaging.md","ref":"packaging.md","articles":[]},"previous":{"title":"LaTeX Equations","level":"1.4.7","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/video-player.md","mtime":"2016-08-14T00:47:13.679Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-14T01:11:48.396Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"NumberInput","level":"1.4.1.2","depth":3,"next":{"title":"SliderInput","level":"1.4.1.3","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"previous":{"title":"CheckboxInput","level":"1.4.1.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/number-input.md","mtime":"2016-08-14T01:10:53.592Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-14T01:11:48.396Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
