--- a/components/r-help.html
+++ b/components/r-help.html
@@ -60,7 +60,7 @@
     <link rel="next" href="r-shell.html" />
     
     
-    <link rel="prev" href="r-plot.md" />
+    <link rel="prev" href="r-plot.html" />
     
 
     </head>
@@ -174,9 +174,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="dashboard.md">
+        <li class="chapter " data-level="1.4.1" data-path="dashboard.html">
             
-                <span>
+                <a href="dashboard.html">
             
                     
                     Dashboard
@@ -188,9 +188,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.md">
+        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.html">
             
-                <span>
+                <a href="checkbox-input.html">
             
                     
                     CheckboxInput
@@ -201,9 +201,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.2" data-path="number-input.md">
+        <li class="chapter " data-level="1.4.1.2" data-path="number-input.html">
             
-                <span>
+                <a href="number-input.html">
             
                     
                     NumberInput
@@ -214,9 +214,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.md">
+        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.html">
             
-                <span>
+                <a href="slider-input.html">
             
                     
                     SliderInput
@@ -272,9 +272,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.md">
+        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.html">
             
-                <span>
+                <a href="density-plot.html">
             
                     
                     Density Plot
@@ -285,9 +285,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.md">
+        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.html">
             
-                <span>
+                <a href="r-plot.html">
             
                     
                     R Plot
@@ -440,7 +440,7 @@
 <ul>
 <li><strong>func</strong>: name of the <code>R function</code> for which to open the documentation. If not supplied, the content of the <code>RHelp</code> tag is assumed to be equal to the name of the function. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>library</strong>: name of the R package in which the function resides. Default: <code>base</code>.</li>
-<li><strong>visible</strong>: <code>boolean</code> indicating whether to help popover should be opened at startup. Default: <code>false</code>.</li>
+<li><strong>visible</strong>: <code>boolean</code> indicating whether the help modal window should be opened at startup. Default: <code>false</code>.</li>
 </ul>
 
                                 
@@ -469,7 +469,7 @@
 
             
                 
-                <a href="r-plot.md" class="navigation navigation-prev " aria-label="Previous page: R Plot">
+                <a href="r-plot.html" class="navigation navigation-prev " aria-label="Previous page: R Plot">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
@@ -485,7 +485,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Help","level":"1.4.4","depth":2,"next":{"title":"R Shell","level":"1.4.5","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"previous":{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-help.md","mtime":"2016-08-13T16:08:41.751Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Help","level":"1.4.4","depth":2,"next":{"title":"R Shell","level":"1.4.5","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"previous":{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-help.md","mtime":"2016-08-13T17:58:46.903Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-14T01:11:48.396Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
