--- a/components/r-shell.html
+++ b/components/r-shell.html
@@ -174,9 +174,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="dashboard.md">
+        <li class="chapter " data-level="1.4.1" data-path="dashboard.html">
             
-                <span>
+                <a href="dashboard.html">
             
                     
                     Dashboard
@@ -188,9 +188,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.md">
+        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.html">
             
-                <span>
+                <a href="checkbox-input.html">
             
                     
                     CheckboxInput
@@ -201,9 +201,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.2" data-path="number-input.md">
+        <li class="chapter " data-level="1.4.1.2" data-path="number-input.html">
             
-                <span>
+                <a href="number-input.html">
             
                     
                     NumberInput
@@ -214,9 +214,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.md">
+        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.html">
             
-                <span>
+                <a href="slider-input.html">
             
                     
                     SliderInput
@@ -272,9 +272,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.md">
+        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.html">
             
-                <span>
+                <a href="density-plot.html">
             
                     
                     Density Plot
@@ -285,9 +285,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.md">
+        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.html">
             
-                <span>
+                <a href="r-plot.html">
             
                     
                     R Plot
@@ -440,14 +440,14 @@
 </code></pre>
 <h2 id="options">Options</h2>
 <ul>
-<li><code>code</code>: R code <code>string</code> to be evaluated. Default: <code>&apos;&apos;</code>.</li>
-<li><code>lines</code>: <code>number</code> specifying how many lines to display. Default: <code>5</code>.</li>
-<li><code>onResult</code>: Callback <code>function</code> that is invoked whenever the result of a code execution is obtained from the cloud. The result <code>string</code> is passed as the only argument to the callback function. Default: <code>null</code>.</li>
-<li><code>solution</code>: For programming questions, an R code <code>string</code> representing the official solution can be supplied. Default: <code>&apos;&apos;</code>.</li>
-<li><code>libraries</code>: <code>Array</code> of R libraries that should be loaded automatically when the input <code>code</code> is executed. Default: <code>[]</code>.</li>
-<li><code>hints</code>: For programming questions, an <code>Array</code> of <code>strings</code> providing guidance on how to approach the problem. Default: <code>[]</code>.</li>
-<li><code>fontSize</code>: <code>number</code> specifying the used font size in the shell window. Default: <code>16</code>.</li>
-<li><code>fontFamily</code>: <code>string</code> denoting the font-family used in the shell window. Default: <code>Courier New</code>.</li>
+<li><strong>code</strong>: R code <code>string</code> to be evaluated. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>lines</strong>: <code>number</code> specifying how many lines to display. Default: <code>5</code>.</li>
+<li><strong>onResult</strong>: Callback <code>function</code> that is invoked whenever the result of a code execution is obtained from the cloud. The result <code>string</code> is passed as the only argument to the callback function. Default: <code>null</code>.</li>
+<li><strong>solution</strong>: For programming questions, an R code <code>string</code> representing the official solution can be supplied. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>libraries</strong>: <code>Array</code> of R libraries that should be loaded automatically when the input <code>code</code> is executed. Default: <code>[]</code>.</li>
+<li><strong>hints</strong>: For programming questions, an <code>Array</code> of <code>strings</code> providing guidance on how to approach the problem. Default: <code>[]</code>.</li>
+<li><strong>fontSize</strong>: <code>number</code> specifying the used font size in the shell window. Default: <code>16</code>.</li>
+<li><strong>fontFamily</strong>: <code>string</code> denoting the font-family used in the shell window. Default: <code>Courier New</code>.</li>
 </ul>
 
                                 
@@ -492,7 +492,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Shell","level":"1.4.5","depth":2,"next":{"title":"Switch","level":"1.4.6","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"R Help","level":"1.4.4","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-shell.md","mtime":"2016-08-13T15:58:25.751Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Shell","level":"1.4.5","depth":2,"next":{"title":"Switch","level":"1.4.6","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"R Help","level":"1.4.4","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-shell.md","mtime":"2016-08-14T00:41:50.539Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-14T01:11:48.396Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
